RESOLVED FIXED20652
WebKit doesn't display favicons with MIME type image/vnd.microsoft.icon
https://bugs.webkit.org/show_bug.cgi?id=20652
Summary WebKit doesn't display favicons with MIME type image/vnd.microsoft.icon
David Kilzer (:ddkilzer)
Reported 2008-09-04 15:40:27 PDT
Similar to Bug 15640, the new official MIME type for favicons, image/vnd.microsoft.icon, is not returned from CGImageSourceCopyTypeIdentifiers(), so opening a favicon using this MIME type will result in it being downloaded instead of being displayed.
Attachments
Patch v1 (9.17 KB, patch)
2009-05-17 16:06 PDT, David Kilzer (:ddkilzer)
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2009-05-17 16:06:34 PDT
Created attachment 30429 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 2 2009-05-18 11:59:57 PDT
$ git svn dcommit Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/http/tests/misc/favicon-as-image.html A LayoutTests/http/tests/misc/resources/.htaccess A LayoutTests/http/tests/misc/resources/favicon-vnd-ms.ico M LayoutTests/platform/mac/http/tests/misc/favicon-as-image-expected.checksum M LayoutTests/platform/mac/http/tests/misc/favicon-as-image-expected.png M LayoutTests/platform/mac/http/tests/misc/favicon-as-image-expected.txt M WebCore/ChangeLog M WebCore/inspector/front-end/inspector.js M WebCore/platform/MIMETypeRegistry.cpp Committed r43834 http://trac.webkit.org/changeset/43834
Note You need to log in before you can comment on or make changes to this bug.