        Bug 20652: WebKit doesn't display favicons with MIME type image/vnd.microsoft.icon

<https://bugs.webkit.org/show_bug.cgi?id=20652>

        Reviewed by Darin Adler.

WebCore:

        Test: http/tests/misc/favicon-as-image.html

        * inspector/front-end/inspector.js: Added
        image/vnd.microsoft.icon to WebInspector.MIMETypes.
        * platform/MIMETypeRegistry.cpp:
        (WebCore::initializeSupportedImageMIMETypes): Added
        image/vnd.microsoft.icon to list of supported image and image
        resource MIME types.

LayoutTests:

        Updated existing favicon-as-image.html test to display a third
        image having MIME type image/vnd.microsoft.icon.

        * http/tests/misc/favicon-as-image.html: Updated.
        * http/tests/misc/resources/.htaccess: Added.
        * http/tests/misc/resources/favicon-vnd-ms.ico: Copied from LayoutTests/fast/images/resources/favicon.ico.
        * platform/mac/http/tests/misc/favicon-as-image-expected.checksum: Updated.
        * platform/mac/http/tests/misc/favicon-as-image-expected.png: Updated.
        * platform/mac/http/tests/misc/favicon-as-image-expected.txt: Updated.

git-svn-id: svn://svn.chromium.org/blink/trunk@43834 bbb929c8-8fbe-4397-9dbb-9b2b20218538